--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,8 @@
-<h2>Change your password</h2>
-
+<div class="container">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+<h2 class="form-signin-heading">Change your password</h2>
+
+
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
@@ -21,5 +23,24 @@
     <%= f.submit "Change my password" %>
   </div>
 <% end %>
+  <%= render "devise/shared/links" %>
+</div>
 
-<%= render "devise/shared/links" %>
+
+
+
+
+
+<div class="container">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post, class: "form-singin"}) do |f| %>
+      <h2 class="form-signin-heading">Forgot your password?</h2>
+      <%= devise_error_messages! %>
+      <div class="field">
+        <%= f.label :email, class: 'sr-only' %><br/>
+        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Send me reset password instructions" %>
+      </div>
+  <% end %>
+</div>
