--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,22 @@
 
   <%= render 'shared/navbar' %>
 
-  <% if notice %>
-    <p class="alert alert-success"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
+  <div class="container">
+    <% if notice %>
+        <div class="alert alert-success" role="alert">
+          <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
+          <span class="sr-only">Success:</span>
+          <%= notice %>
+        </div>
+    <% end %>
+    <% if alert %>
+        <div class="alert alert-danger" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span>
+          <%= alert %>
+        </div>
+    <% end %>
+  </div>
   <%= yield %>
 
 </body>
