--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,9 +27,10 @@
       <%= f.submit "Update", class: 'btn btn-lg btn-primary btn-block' %>
   <% end %>
 
-
-  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
-  <%= link_to "Back", :back %>
+  <br/>
+  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-lg btn-primary btn-block' %>
+  <br />
+  <%= link_to "Back", :back, class: 'btn btn-lg btn-primary btn-block' %>
 </div>
 
 
