--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,20 +7,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">WorkManager</a>
+      <a class="navbar-brand">WorkManager</a>
     </div>
 
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
-
+        <li class="dropdown">
+          <a class="dropdown-to" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Verwaltung <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Kunden", customers_path %></li>
+            <li><%= link_to "Arbeitsschritte" %></li>
+          </ul>
+        </li>
         <li><%= link_to "About", about_path %></li>
       </ul>
 
       <p class="navbar-text pull-right">
         <% if user_signed_in? %>
-            Logged in as <strong><%= current_user.email %></strong>.
+            Logged in as <strong><%= current_user.email %></strong>
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
         <% else %>
