--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,11 @@
         </div>
     <% end %>
   </div>
-  <%= yield %>
+
+  <div class="container">
+    <%= yield %>
+  </div>
+
 
 </body>
 </html>
