--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
           <a class="dropdown-to" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Verwaltung <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Kunden", customers_path %></li>
-            <li><%= link_to "Arbeitsschritte" %></li>
+            <li><%= link_to "Arbeitsschritte", work_steps_path %></li>
           </ul>
         </li>
         <li><%= link_to "About", about_path %></li>
