--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,23 +1,29 @@
-<h1>Listing Customers</h1>
+<h1>Kunden</h1>
 
-<table>
+<%= render "shared/editableListToolbar" %>
+<table class="table table-condensed table-striped">
   <thead>
     <tr>
-      <th>Kundennummer</th>
-      <th>Name1</th>
-      <th>Name2</th>
-      <th>Straße</th>
-      <th>Hausnummer</th>
-      <th>PLZ</th>
-      <th>Stadt</th>
-      <th>Land</th>
-      <th colspan="3"></th>
+      <th class="col-sm-1"></th>
+      <th class="col-sm-2">Kundennummer</th>
+      <th class="col-sm-2">Name1</th>
+      <th class="col-sm-2">Name2</th>
+      <th class="col-sm-2">Straße</th>
+      <th class="col-sm-2">Hausnummer</th>
+      <th class="col-sm-2">PLZ</th>
+      <th class="col-sm-2">Stadt</th>
+      <th class="col-sm-2">Land</th>
     </tr>
   </thead>
 
   <tbody>
     <% @customers.each do |customer| %>
       <tr>
+        <td>
+          <%= link_to ('<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>').html_safe, customer %>
+          <%= link_to ('<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>').html_safe, edit_customer_path(customer) %>
+          <%= link_to ('<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>').html_safe, customer, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
         <td><%= customer.Number %></td>
         <td><%= customer.Name1 %></td>
         <td><%= customer.Name2 %></td>
@@ -26,14 +32,7 @@
         <td><%= customer.ZipCode %></td>
         <td><%= customer.City %></td>
         <td><%= customer.Country %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Customer', new_customer_path %>
