--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,15 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-signin"}) do |f| %>
       <h2 class="form-signin-heading">Please sign up</h2>
 
+      <%= f.label :username, 'Username', class: 'sr-only' %>
+      <%= f.text_field :username, class: 'form-control', placeholder: 'Username' %>
+
+      <%= f.label :firstname, 'Vorname', class: 'sr-only' %>
+      <%= f.text_field :firstname, class: 'form-control', placeholder: 'Vorname' %>
+
+      <%= f.label :lastname, 'Nachname', class: 'sr-only' %>
+      <%= f.text_field :lastname, class: 'form-control', placeholder: 'Nachname' %>
+
       <%= f.label :email, 'Email Address', class: 'sr-only' %>
       <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email Address' %>
 
