--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,49 +1,56 @@
 <%= form_for(@customer) do |f| %>
-  <% if @customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+    <% if @customer.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
-      <ul>
-      <% @customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @customer.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :Number %><br>
+      <%= f.number_field :Number, class: 'form-control' %>
     </div>
-  <% end %>
+    <div class="field">
+      <%= f.label :Name1 %><br>
+      <%= f.text_field :Name1, class: 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :Name2 %><br>
+      <%= f.text_field :Name2, class: 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :Street %><br>
+      <%= f.text_field :Street, class: 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :HoNumber %><br>
+      <%= f.number_field :HoNumber, class: 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :ZipCode %><br>
+      <%= f.number_field :ZipCode, class: 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :City %><br>
+      <%= f.text_field :City, class: 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :Country %><br>
+      <%= f.text_field :Country, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :Number %><br>
-    <%= f.number_field :Number %>
-  </div>
-  <div class="field">
-    <%= f.label :Name1 %><br>
-    <%= f.text_field :Name1 %>
-  </div>
-  <div class="field">
-    <%= f.label :Name2 %><br>
-    <%= f.text_field :Name2 %>
-  </div>
-  <div class="field">
-    <%= f.label :Street %><br>
-    <%= f.text_field :Street %>
-  </div>
-  <div class="field">
-    <%= f.label :HoNumber %><br>
-    <%= f.number_field :HoNumber %>
-  </div>
-  <div class="field">
-    <%= f.label :ZipCode %><br>
-    <%= f.number_field :ZipCode %>
-  </div>
-  <div class="field">
-    <%= f.label :City %><br>
-    <%= f.text_field :City %>
-  </div>
-  <div class="field">
-    <%= f.label :Country %><br>
-    <%= f.text_field :Country %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <br />
+
+    <div class="btn-group btn-group-lg">
+      <%= f.submit t('submit'), class: 'btn btn-default' %>
+      <% if controller.action_name == 'edit' %>
+          <%= link_to t('list.show_single'), @customer, class: 'btn btn-default' %>
+      <% end %>
+      <%= link_to t('back'), customers_path, class: 'btn btn-default' %>
+    </div>
 <% end %>
