--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Customer</h1>
+<h3><%= t('list.edit') %></h3>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @customer %> |
-<%= link_to 'Back', customers_path %>
