--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,3 +1,5 @@
+<h3><%= t('list.show_single') %></h3>
+
 <p>
   <strong>Number:</strong>
   <%= @customer.Number %>
@@ -38,5 +40,7 @@
   <%= @customer.Country %>
 </p>
 
-<%= link_to 'Edit', edit_customer_path(@customer) %> |
-<%= link_to 'Back', customers_path %>
+<div class="btn-group btn-group-lg">
+  <%= link_to t('list.edit'), edit_customer_path(@customer), class: 'btn btn-default' %>
+  <%= link_to t('back'), customers_path, class: 'btn btn-default' %>
+</div>
