--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,11 @@
   </div>
 
   <div class="container">
+    <div class="page-header">
+      <h1><%= t(controller.controller_name) %></h1>
+    </div>
+
+
     <%= yield %>
   </div>
 
