--- a/app/views/work_steps/edit.html.erb
+++ b/app/views/work_steps/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Work Step</h1>
+<h3><%= t('list.edit') %></h3>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @work_step %> |
-<%= link_to 'Back', work_steps_path %>
