--- a/app/views/work_steps/index.html.erb
+++ b/app/views/work_steps/index.html.erb
@@ -1,13 +1,13 @@
-<h1>Work Steps</h1>
+<h3><%= t('list.show_all') %></h3>
 
 <%= render "shared/editableListToolbar" %>
-<table class="table table-condensed table-striped">
+<table class="table table-sm">
   <thead>
     <tr>
       <th class="col-sm-1"></th>
-      <th class="col-sm-2">Bezeichnung</th>
-      <th class="col-sm-2">Beschreibung</th>
-      <th class="col-sm-2">Mengeneingabe erlauben</th>
+      <th class="col-sm-1">Bezeichnung</th>
+      <th class="col-sm-1">Mengeneingabe</th>
+      <th class="col-sm-5">Beschreibung</th>
     </tr>
   </thead>
 
@@ -18,16 +18,12 @@
           <%= link_to ('<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>').html_safe, work_step %>
           <%= link_to ('<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>').html_safe, edit_work_step_path(work_step) %>
           <%= link_to ('<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>').html_safe, work_step,
-                      method: :delete, data: { confirm: 'Are you sure?' } %>
+                      method: :delete, data: { confirm: t('askForConfirmation') } %>
         </td>
         <td><%= work_step.DisplayName %></td>
-        <td><%= work_step.Description %></td>
         <td><%= work_step.AllowQuantityInput %></td>
+        <td><%= work_step.Description %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<!--<td><= link_to 'Show', work_step %></td>
-<td><= link_to 'Edit', edit_work_step_path(work_step) %></td>
-<td><= link_to 'Destroy', work_step, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
